<resources>
    <string name="app_name">Sports</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="game">Game</string>
    <string name="team">Team</string>
    <string name="athlete">Athlete</string>
    <string name="select">Επέλεξε κατηγορία</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="sport">sport</string>
    <string name="insert_team">Insert Team</string>
    <string name="insert1">INSERT</string>
    <string name="insert_athlete">Insert Athlete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="birthyear">Birthyear</string>
    <string name="insert2">INSERT</string>
    <string name="name">Name</string>
    <string name="stadium_name">Stadium Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="creation_year">Creation Year</string>
    <string name="insert_sport">Insert Sport</string>
    <string name="button">Button</string>
    <string name="insert3">INSERT</string>
    <string name="name">Name</string>
    <string name="team">Team</string>
    <string name="individual">Individual</string>
    <string name="delete_sport">Delete Sport</string>
    <string name="delete">DELETE</string>
    <string name="delete_athlete">Delete Athlete</string>
    <string name="delete">DELETE</string>
    <string name="delete_team">Delete Team</string>
    <string name="delete">DELETE</string>


</resources>